--- a/src/views/components/HeaderRouter.css
+++ b/src/views/components/HeaderRouter.css
@@ -1,3 +1,16 @@
+/* Top buttons */
+.home-button {
+    background: #555;
+    padding: 10px 10px 10px 10px;
+    border-radius: 0 0 15px 15px;
+}
+.back-button {
+    background: #555;
+    padding: 10px 10px 10px 10px;
+    border-radius: 0 0 15px 15px;
+    cursor: pointer;
+}
+
 .header {
     padding: -10px -10px;
     background: #0000;
@@ -20,4 +33,24 @@
 
 button {
     outline : 0 none;
+}
+
+/* unvisited link */
+a:link {
+  color: #ff9955;
+}
+
+/* visited link */
+a:visited {
+  color: #ff9955;
+}
+
+/* mouse over link */
+a:hover {
+  color: #ff9955;
+}
+
+/* selected link */
+a:active {
+  color: #0000EE;
 }
